src/objects/Performance__c.object
<CustomObject>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Performances</relationshipLabel>
        <relationshipName>Performances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Performance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Venue__c</columns>
        <columns>Start_DateTime__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>